Further work on legacy item lists
